# Backup-to-Drive

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  backup-to-drive.sh  backup_to_drive.py  obtain_new_token.py  pyproject.toml  settings.py
.github/: dependabot.yml
.github/workflows/: ci.yml
util/: logging_utils.py
