[project]
name = "backup-to-drive"
requires-python = ">=3.13"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

dependencies = [
  "google-api-python-client~=2.179",
  "google-auth-httplib2~=0.2",
  "google-auth-oauthlib~=1.2",
]

[dependency-groups]
dev = [
  "pre-commit~=4.3",
]

[tool.setuptools]
py-modules = [  ]

[tool.uv]
# Don't install `dev` by default (see
# https://docs.astral.sh/uv/concepts/projects/dependencies/#default-groups), to make it
# easier to *not* install those dependencies when running the main script in a prod
# environment
default-groups = [  ]
